--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
   html {
     width: 100vw;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
   }
   .text {
     margin-left: 0 !important;
